# learn_python_01_package_008_tutorial

./: LICENSE  README.md  pyproject.toml
src/palindrome_stonelouse/: phrase.py
tests/: test_phrase.py
