[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "palindrome_stonelouse"
version = "0.0.1"
authors = [
  { name="Stonelouse", email="stonelouse@leavemealone.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/stonelouse/learn_python_01_package_008_tutorial"
"Bug Tracker" = "https://github.com/stonelouse/learn_python_01_package_008_tutorial/issues"
